<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pass The Doodle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dev_name">&#169; Shattered Screen Development</string>
    <string name="log_me_in">Log me in</string>
    <string name="action_register">Register</string>
    <string name="action_guest">Guest</string>
    <string name="main_title">Pass The Doodle</string>
    <string name="title_activity_drawing">Drawing</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="colorpicker">Colors</string>
    <string name="import_img">Import</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="prompt">Prompt</string>
    <string name="submit">Submit</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="hint_text_response">Guess the doodle!</string>
    <string name="title_activity_text">Describe</string>
    <string name="title_activity_vc">Finished</string>
    <string name="action_change_email_short">Change email</string>
    <string name="email_status_changing">Changing email&#8230;</string>
    <string name="action_help">How to play</string>
    <string name="action_log_out_short">Log out</string>
    <string name="action_report_short">Report</string>
    <string name="hue_view_content_desc">Hue image</string>
    <string name="hue_cursor_content_desc">Hue image cursor</string>
    <string name="color_picker_content_desc">Color picker image</string>
    <string name="arrow_content_desc">Arrow image</string>
</resources>
