<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sysWhite"
    android:orientation="vertical"
    tools:context=".DrawingActivity" >
 
    <TextView
        android:id="@+id/drawing_activity_prompt_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="12"
        android:gravity="center" 
        android:textSize="20sp"
        android:textColor="@color/sysWhite"
        android:background="@color/accent" />

    <!-- Custom View -->

    <com.main.passthedoodle.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="110"
        android:background="@color/sysWhite" />
    
    <!-- Bottom Buttons -->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="12"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/accent" >

        <ImageButton
            android:id="@+id/import_btn"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/import_img"
            android:src="@drawable/ic_action_upload" />

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/ic_action_new_picture" />

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush" />

        <ImageButton
            android:id="@+id/color_btn"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/colorpicker"
            android:src="@drawable/ic_menu_color_palette_holo_light" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_action_save" />
        
        <ImageButton
            android:id="@+id/submit_btn"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/submit"
            android:src="@drawable/ic_action_send_now" />
        
    </LinearLayout>    

</LinearLayout>